--- a/great-idea/index.html
+++ b/great-idea/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <div class="container home">
-        <nav> <a href="#">Services</a> <a href="#">Product</a> <a href="#">Vision</a> <a href="#">Features</a> <a href="#">About</a> <a href="#">Contact</a>
+        <nav> <a href="services.html">Services</a> <a href="#">Product</a> <a href="#">Vision</a> <a href="#">Features</a> <a href="#">About</a> <a href="#">Contact</a>
             <div class="logo-frame">
                 <span class="logo-helper"></span>
                 <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
