--- a/great-idea/index.html
+++ b/great-idea/index.html
@@ -20,7 +20,7 @@
         <nav> <a href="services.html">Services</a> <a href="#">Product</a> <a href="#">Vision</a> <a href="#">Features</a> <a href="#">About</a> <a href="#">Contact</a>
             <div class="logo-frame">
                 <span class="logo-helper"></span>
-                <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+                <a href="index.html"><img class="logo" src="img/logo.png" alt="Great Idea! Company logo."></a>
             </div>
         </nav>
         <header>
