--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -18,7 +18,7 @@
 <body class="">
     <div class="container services">
         <header>
-            <nav> <a href="#">Services</a> <a href="#">Product</a> <a href="#">Vision</a> <a href="#">Features</a> <a href="#">About</a> <a href="#">Contact</a>
+            <nav> <a href="#">Services</a> <a href="#">Product</a> <a href="#">Vision</a> <a href="#">Features</a> <a href="about.html">About</a> <a href="#">Contact</a>
                 <div class="logo-frame">
                     <span class="logo-helper"></span>
                     <a href="index.html"><img class="logo" src="img/logo.png" alt="Great Idea! Company logo."></a>
