--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -15,7 +15,7 @@
   <![endif]-->
 </head>
 
-<body class="">
+<body>
     <div class="container services">
         <header>
             <nav> <a href="#">Services</a> <a href="#">Product</a> <a href="#">Vision</a> <a href="#">Features</a> <a href="about.html">About</a> <a href="#">Contact</a>
